modified theme, added new parallax fx, containers for tech icons, framer motion for skills section

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,8 +11,9 @@ html {
 }
 
 body {
-    background: linear-gradient(45deg, rgb(226, 220, 223), rgb(89, 0, 255));
+    background: rgb(22, 112, 248);
     color: white;
+    
 }
 
 a {
