--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     background-color: turquoise;
     color: black;
+    
 
     .bg {
 
@@ -14,6 +15,7 @@
         bottom: 0;
         width: 400px;
         background: white;
+        z-index: 999;
 
         .links {
             position: absolute;
@@ -43,6 +45,7 @@
         background-color: transparent;
         border: none;
         cursor: pointer;
+        z-index: 999;
 
     }
 
