retooling the parallax elements, didnt like css scrolling, so adding js logic to handle smooth scrolling

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,10 +5,10 @@
     font-family: 'JetBrains Mono', monospace;
 }
 
-html {
-    scroll-snap-type: y mandatory;
-    scroll-behavior: smooth;
-}
+// html {
+//     scroll-snap-type: y mandatory;
+//     scroll-behavior: smooth;
+// }
 
 body {
     background: rgb(22, 112, 248);
