--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -3,6 +3,7 @@
     // overflow: hidden;
     // background: linear-gradient(45deg, rgba(0, 255, 42, 0.534), rgb(255, 72, 0));
     position: relative;
+    background-attachment: fixed;
 
     .wrapper {
         max-width: 50%; 
