--- a/src/components/technologies/technologies.scss
+++ b/src/components/technologies/technologies.scss
@@ -67,7 +67,7 @@ align-items: center;
         justify-content: center;
         gap: 20px;
         margin: 0 auto;
-        max-width: 75%;
+        max-width: 660px;
 
         .techIconContainer {
             display: flex;
