--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@
 // }
 
 body {
-    background: rgb(22, 112, 248);
+    background: linear-gradient(180deg, grey, black);
     color: white;
     
 }
